k8s/base/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: franklin-site-status-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: franklin-site-status-server
  template:
    metadata:
      labels:
        app: franklin-site-status-server
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: node-express-server
          image: docker-experience-success-release.dr-uw2.adobeitc.com/franklin/site-status-server:latest
          ports:
            - name: server-port
              containerPort: 8000
              protocol: TCP
          resources:
            requests:
              cpu: "2"
              memory: "4Gi"
            limits:
              cpu: "4"
              memory: "8Gi"
---
apiVersion: v1
kind: Service
metadata:
  name: franklin-site-status-service
  labels:
    app: franklin-site-status-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
      name: http
  selector:
    app: franklin-site-status-server
---
apiVersion: contour.heptio.com/v1beta1
kind: IngressRoute
metadata:
  name: franklin-site-status-server-ingress-public
  annotations:
    kubernetes.io/ingress.class: contour-public
spec:
  virtualhost:
    fqdn: franklin-site-status-server.ethos09-prod-va7.ethos.adobe.net
    tls:
      secretName: heptio-contour/cluster-ssl-public
  routes:
    - match: /
      services:
        - name: franklin-site-status-service
          port: 80
